# openbourse

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  alembic.ini  codecov.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_price_usd.py  0003_add_business_summary.py  0004_business_summary_to_text.py  0005_add_concern_scans.py  0006_add_roic_pct.py  0007_add_sync_runs.py  0008_add_pe_ratio_ttm.py
docs/: architecture.md  development.md  providers.md
scripts/: market_sync_scheduler.py  take_screenshots.py
src/openbourse/: __init__.py  __main__.py  cli.py  config.py
src/openbourse/data/: __init__.py  seed.json
src/openbourse/data/lists/: __init__.py  popular_us.txt
src/openbourse/db/: __init__.py  engine.py  models.py  repositories.py
src/openbourse/domain/: __init__.py  models.py
src/openbourse/providers/: __init__.py  base.py  claude.py  edgar.py  fmp.py  quotes.py  registry.py  scanner.py  yfinance.py
src/openbourse/screening/: __init__.py  concerns.py  criteria.py  fit.py  lookup.py  risk.py  risk_factors.py  scoring.py  service.py
src/openbourse/tui/: __init__.py  app.py  styles.tcss
src/openbourse/tui/screens/: __init__.py  brief.py  filters.py  lookup.py  screener.py
src/openbourse/tui/widgets/: __init__.py  history_charts.py  price_chart.py  roic_chart.py  status_bar.py  valuation_panel.py
src/openbourse/universe/: __init__.py  ingest.py  loaders.py  sources.py
tests/: conftest.py
tests/integration/: test_postgres.py
tests/unit/: test_brief_parser.py  test_cli.py  test_concern_scan_repo.py  test_config.py  test_criteria.py  test_fit.py  test_history.py  test_lookup.py  test_market_sync_scheduler.py  test_price_chart.py  test_provider_parsers.py  test_provider_registry.py  test_provider_stubs.py  test_quote_polling.py  test_quotes.py  test_repositories.py  test_risk.py  test_risk_factors.py  test_roic_chart.py  test_scanner.py  test_scoring.py  test_screening_service.py  test_status_bar.py  test_universe.py  test_valuation.py
