[project]
name = "openbourse"
version = "0.1.0"
description = "Terminal-first equity research workstation. Textual TUI over PostgreSQL with pluggable data providers."
authors = [
    { name = "The openbourse authors" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<4.0"
keywords = ["finance", "equity", "screener", "tui", "textual", "postgresql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "textual>=0.85,<2.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "greenlet>=3.0,<4.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "typer>=0.12,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "httpx>=0.27,<1.0",
    "anthropic>=0.40,<1.0",
    "python-dotenv>=1.0,<2.0",
    "rich>=13.7,<15.0",
    "plotext>=5.2,<6.0",
    "yfinance>=0.2.40,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<7.0",
    "aiosqlite>=0.20,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<5.0",
    "textual-dev>=1.5,<2.0",
]

[project.scripts]
bourse = "openbourse.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/openbourse"
Repository = "https://github.com/your-org/openbourse"
Issues = "https://github.com/your-org/openbourse/issues"
Changelog = "https://github.com/your-org/openbourse/blob/main/CHANGELOG.md"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "openbourse", from = "src" }]
include = [
    { path = "alembic", format = ["sdist", "wheel"] },
    { path = "alembic.ini", format = ["sdist", "wheel"] },
    { path = "src/openbourse/data/seed.json", format = ["sdist", "wheel"] },
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

# --- Ruff ---
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # bugbear
    "A",        # builtins
    "C4",       # comprehensions
    "PT",       # pytest-style
    "SIM",      # simplify
    "RUF",      # ruff-specific
    "D",        # pydocstyle
]
ignore = [
    "E501",     # line length handled by formatter
    "D100",     # docstring in public module: noisy for tiny __init__/__main__ files
    "D104",     # docstring in public package
    "D105",     # docstring in magic method
    "D107",     # docstring in __init__: prefer class-level docstring
    "D203",     # conflicts with D211 — pick "no blank line before class docstring"
    "D213",     # conflicts with D212 — pick "summary on first physical line"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803", "D"]  # test names + no docstrings required for tests
"alembic/**/*.py" = ["D"]  # autogenerated migration scaffolding

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

# --- Pytest ---
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=openbourse",
    "--cov-report=term-missing",
]
markers = [
    "integration: tests that require a running PostgreSQL (deselect with '-m \"not integration\"')",
    "live: tests that hit real third-party APIs (skipped unless credentials are set)",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:asyncio",
    "ignore::DeprecationWarning:pytest_asyncio",
    "ignore:.*asyncio\\.get_event_loop_policy.*:DeprecationWarning",
    "ignore:.*asyncio\\.set_event_loop_policy.*:DeprecationWarning",
]

# --- Coverage ---
[tool.coverage.run]
source = ["src/openbourse"]
branch = true
omit = [
    "src/openbourse/tui/*",
    "src/openbourse/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false
